<resources>
    <!-- Основные строковые ресурсы приложения. -->
    <string name="app_name">PocketDoc</string>
    <string name="api_key">AIzaSyBQG-KS67d0mwcdgjafND6u3OcYTnr_Fqc</string>
    <string name="clinics_service_description">Служба, отвечающая за загрузку клиник</string>

    <!-- Названия пунктов меню activity_main_bottom_navigation. -->
    <string name="doctors_activity_main_bottom_navigation_menu_item_title">Врачи</string>
    <string name="drugs_activity_main_bottom_navigation_menu_item_title">Лекарства</string>
    <string name="clinics_activity_main_bottom_navigation_menu_item_title">Клиники</string>
    <string name="emergency_activity_main_bottom_navigation_menu_item_title">Экстренные службы</string>

    <!-- Названия fragment'ов на toolbar'е. -->
    <string name="specialities_toolbar_title">Список специальностей</string>
    <string name="emergency_toolbar_title">Номера экстренных служб</string>
    <string name="clinics_title">Карта клиник</string>
    <string name="stations_title">Список станций метро</string>
    <string name="doctors_title">Список врачей</string>
    <string name="doctor_title">Информация о враче</string>
    <string name="tab_title_doctors">Врачи</string>
    <string name="tab_title_clinics">Клиники</string>
    <string name="clinic_title">Информация о клинике</string>
    <string name="history_tab_title">История записей</string>
    <string name="drugs_list_title">Список лекарств</string>
    <string name="drug_reminder_title">Напоминание приёма лекарста</string>

    <string name="item_refresh_specialities">Обновить список специальностей</string>
    <string name="item_records_history">История записей</string>

    <string name="speciality_name_preview">Специальность</string>

    <string name="item_show_only_clinics">Только клиники</string>
    <string name="item_show_only_diagnostics">Только диагн. центры</string>

    <string name="clinic_logo_content_description">Логотип клиники</string>
    <string name="clinic_name_icon_content_description">Иконка здания</string>
    <string name="clinic_name_label_text_view">Название</string>
    <string name="clinic_name_text_view_preview">Клиника \"Lorem Ipsum\"</string>
    <string name="clinic_address_icon_content_description">Иконка адреса</string>
    <string name="clinic_address_label_text_view">Адрес</string>
    <string name="clinic_address_text_view_preview">ул. Садовая, 18к3</string>
    <string name="clinic_phone_icon_content_description">Иконка телефона</string>
    <string name="clinic_phone_label_text_view">Номер телефона</string>
    <string name="clinic_phone_text_view_preview">+7(999)123–45–67</string>
    <string name="clinic_url_icon_content_description">Иконка сайта</string>
    <string name="clinic_url_label">Сайт клиники</string>
    <string name="clinic_url_text_view_preview">https://loremipsum.io</string>
    <string name="clinic_description_label">Подробное описание</string>
    <string name="clinic_description_preview_text_view">@string/lorem_ipsum</string>

    <string name="item_refresh_stations">Обновить список станций метро</string>

    <string name="station_line_indicator_content_description">Индикатор линии метро</string>

    <string name="station_name_preview">Станция</string>

    <string name="date_picker_dialog_fragment_title">Желаемая дата посещения</string>
    <string name="date_picker_dialog_fragment_positive_button_text">Ок</string>
    <string name="date_picker_dialog_fragment_negative_button_text">Отмена</string>
    <string name="date_picker_dialog_text_view">
        Записаться на приём к врачу онлайн можно только на ближайшие 2 недели!</string>

    <string name="no_doctors_dialog_message">
        Отсутствуют врачи с заданными харакетристиками!</string>
    <string name="no_doctors_dialog_positive_button_text">Закрыть</string>

    <string name="item_refresh_doctors">Обновить список докторов</string>

    <string name="doctor_photo_content_description">Фотография врача</string>
    <string name="doctor_name_label">Ф.И.О.</string>
    <string name="doctor_name_preview">Иванов Иван Иванович</string>
    <string name="doctor_speciality_label">Специальность</string>
    <string name="doctor_speciality_preview">Флеболог, хирург</string>
    <string name="doctor_experience_label">Стаж работы</string>
    <string name="doctor_experience_preview">44 года</string>
    <string name="doctor_rating_label">Рейтинг</string>
    <string name="doctor_price_label">Стоимость</string>
    <string name="doctor_price_preview">8000₽</string>
    <string name="doctor_description_label">Подробное описание</string>
    <string name="doctor_description_preview">@string/lorem_ipsum</string>
    <string name="doctor_create_record_button_hint">Записаться</string>
    <string name="item_refresh_doctor_info">Обновить информацию о враче</string>

    <string name="dialog_fragment_create_record_title">Оформление заявки</string>
    <string name="user_name_edit_text_hint">Введите имя</string>
    <string name="user_phone_edit_text_hint">Введите номер телефона</string>
    <string name="create_record_button_text">Оформить заявку</string>

    <string name="loading_error_dialog_message">Ошибка загрузки данных с сервера!\n
        Возможно, нет подключения к интернету.</string>
    <string name="loading_error_image_description">Ошибка загрузки данных</string>

    <string name="loading_error_title">Сообщение об ошибке</string>
    <string name="loading_error_positive_button_text">Попробовать снова</string>
    <string name="loading_error_negative_button_text">Отмена</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. A diam maecenas sed enim
        ut sem viverra aliquet. Neque aliquam vestibulum morbi blandit cursus risus at.
        Ullamcorper sit amet risus nullam eget. Velit egestas dui id ornare arcu odio ut sem nulla.
        Amet est placerat in egestas erat imperdiet sed euismod nisi. Adipiscing commodo elit at
        imperdiet dui accumsan sit amet nulla. Est velit egestas dui id. At auctor urna nunc
        id cursus metus. Placerat in egestas erat imperdiet. In nibh mauris cursus mattis
        molestie a. Eros donec ac odio tempor orci dapibus ultrices in iaculis. Elementum sagittis
        vitae et leo duis ut diam. Ut pharetra sit amet aliquam. Ut placerat orci nulla
        pellentesque dignissim enim sit amet venenatis.</string>
</resources>
