<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/begin_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/end_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/start_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="48dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/end_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="48dp"/>

    <ImageView
        android:id="@+id/clinic_logo_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/clinic_logo_content_description"
        app:layout_constraintTop_toBottomOf="@id/begin_horizontal_guideline"
        app:layout_constraintBottom_toTopOf="@id/end_horizontal_guideline"
        app:layout_constraintStart_toEndOf="@id/start_vertical_guideline"
        app:layout_constraintEnd_toStartOf="@id/end_vertical_guideline"
        tools:src="@drawable/ic_launcher_background"/>

    <TextView
        android:id="@+id/clinic_name_label_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textSize="12sp"
        android:text="@string/clinic_name_label_text_view"
        app:layout_constraintTop_toBottomOf="@id/end_horizontal_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/clinic_name_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="4dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/clinic_name_label_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/clinic_name_text_view_preview"/>

    <TextView
        android:id="@+id/clinic_address_label_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textSize="12sp"
        android:text="@string/clinic_address_label_text_view"
        app:layout_constraintTop_toBottomOf="@id/clinic_name_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/clinic_address_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="4dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/clinic_address_label_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/clinic_address_text_view_preview"/>

</android.support.constraint.ConstraintLayout>